Fix salutation alignment

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -5,6 +5,10 @@
 	text-align: right;
 }
 
+[epub|type~="z3998:letter"] header [epub|type~="z3998:salutation"]{
+	text-align: left;
+}
+
 footer{
 	margin-top: 1em;
 	text-align: right;
